# 3D-2-MC

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
lib/: CMakeLists.txt  config.h.in  shader.cpp  shader.hpp  vboindexer.cpp  vboindexer.hpp
lib/figures/: cube.cpp  cube.h
lib/primitives/: CMakeLists.txt  Point.cpp  Point.h  Polygon.h
shaders/fragment shaders/: ColorFragmentShader.glsl
shaders/vertex shaders/: SimpleVertexShader.glsl
src/: CMakeLists.txt  blocks.XYZ  programm.cpp
